# noteweave-bfts

./: README.md  pyproject.toml
src/noteweave_bfts/: __init__.py  __main__.py  agent_manager.py  control.py  interpreter.py  journal.py  llm_compat.py  log_summarization.py  parallel_agent.py  perform_experiments_bfts_with_agentmanager.py
src/noteweave_bfts/backend/: __init__.py  backend_anthropic.py  backend_noteweave.py  backend_ollama.py  backend_openai.py  utils.py
src/noteweave_bfts/prompts/: summarization.py
src/noteweave_bfts/utils/: __init__.py  config.py  serialize.py
